# hooj

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  tauri.conf.json
.github/workflows/: ci.yml  release.yml
capabilities/: default.json
frontend/: index.html  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__mocks__/: tauri-api.ts  tauri-dialog.ts
frontend/src/__tests__/: constants.test.ts  playback-store.test.ts  project-store.test.ts  time.test.ts
frontend/src/components/: app-toolbar.tsx  empty-state.tsx  export-dialog.tsx  segment-toolbar.tsx  video-preview.tsx
frontend/src/components/timeline/: timeline-playhead.tsx  timeline-ruler.tsx  timeline-segment.tsx  timeline.tsx
frontend/src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  input.tsx  select.tsx  slider.tsx  tooltip.tsx
frontend/src/hooks/: use-export-progress.ts  use-keyboard-shortcuts.ts  use-tauri.ts  use-video-sync.ts
frontend/src/lib/: constants.ts  time.ts
frontend/src/store/: playback-store.ts  project-store.ts  ui-store.ts
frontend/src/types/: index.ts
icons/: icon.icns
scripts/: setup-ffmpeg.sh
src/: lib.rs  main.rs
src/application/: history.rs
src/commands/: export.rs  mod.rs  project.rs  segments.rs  thumbnails.rs
src/domain/: error.rs  export.rs  mod.rs  project.rs  segment.rs
src/infra/ffmpeg/: commands.rs  mod.rs  process.rs  progress.rs
src/state/: mod.rs
